# bazel-java-test-suite-with_cfg-example

./: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  maven_install.json
.github/workflows/: ci.yml
example/: BUILD.bazel
example/src/main/java/com/mattnworb/bazel/: Lib.java
example/src/test/java/com/mattnworb/bazel/: FailsOnJava17Test.java  VersionTest.java
tools/java/: contrib_rules_jvm_create_jvm_test_suite.patch  java_17_junit5_test.bzl  java_21_junit5_test.bzl  repositories.bzl  test_suite.bzl
