load("@rules_java//toolchains:default_java_toolchain.bzl", "default_java_toolchain")
load("@rules_java//toolchains:java_toolchain_alias.bzl", "java_runtime_version_alias")


# this is useful to avoid having to code things like
# java_runtime = "@example_remotejdk_21_macos_x64//:jdk"
java_runtime_version_alias(
    name = "example_remotejdk_21",
    runtime_version = "example_remotejdk_21",
)

# # create additional java toolchain for compilation
default_java_toolchain(
    name = "example_toolchain_jdk_21",
    configuration = dict(),
    java_runtime = ":example_remotejdk_21",
    source_version = "21",
    target_version = "21",
)