module(
    name = "bazel-java-test-suite-with_cfg-example",
    version = "0.0.0",
)

# Core dependencies
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "contrib_rules_jvm", version = "0.30.0")
bazel_dep(name = "with_cfg.bzl", version = "0.14.1")

# Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter:5.14.0",
        "org.junit.jupiter:junit-jupiter-api:5.14.0",
        "org.junit.jupiter:junit-jupiter-engine:5.14.0",
        "org.junit.jupiter:junit-jupiter-migrationsupport:5.14.0",
        "org.junit.jupiter:junit-jupiter-params:5.14.0",
        "org.junit.platform:junit-platform-commons:1.14.0",
        "org.junit.platform:junit-platform-console:1.14.0",
        "org.junit.platform:junit-platform-engine:1.14.0",
        "org.junit.platform:junit-platform-jfr:1.14.0",
        "org.junit.platform:junit-platform-launcher:1.14.0",
        "org.junit.platform:junit-platform-reporting:1.14.0",
        "org.junit.platform:junit-platform-runner:1.14.0",
        "org.junit.platform:junit-platform-suite:1.14.0",
        "org.junit.platform:junit-platform-suite-api:1.14.0",
        "org.junit.platform:junit-platform-suite-commons:1.14.0",
        "org.junit.platform:junit-platform-suite-engine:1.14.0",
        "org.junit.platform:junit-platform-testkit:1.14.0",
        "org.junit.vintage:junit-vintage-engine:5.14.0",
        "org.hamcrest:hamcrest:3.0",

        # resolving warnings about conflicts across bazel modules using the "maven" repo name
        "com.google.code.gson:gson:2.11.0",
        "com.google.errorprone:error_prone_annotations:2.30.0",
        "com.google.guava:guava:33.3.1-jre",
    ],
    duplicate_version_warning = "error",
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")
