module(
    name = "bazel-java-test-suite-with_cfg-example",
    version = "0.0.0",
)

# Core dependencies
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "contrib_rules_jvm", version = "0.31.1")
bazel_dep(name = "with_cfg.bzl", version = "0.14.1")

# Maven dependencies
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    known_contributing_modules = ["bazel-java-test-suite-with_cfg-example", "grpc-java", "protobuf"],
    artifacts = [
        "org.junit.jupiter:junit-jupiter:6.0.2",
        "org.junit.jupiter:junit-jupiter-api:6.0.2",
        "org.junit.jupiter:junit-jupiter-engine:6.0.2",
        "org.junit.jupiter:junit-jupiter-migrationsupport:6.0.2",
        "org.junit.jupiter:junit-jupiter-params:6.0.1",
        "org.junit.platform:junit-platform-commons:6.0.2",
        "org.junit.platform:junit-platform-console:6.0.1",
        "org.junit.platform:junit-platform-engine:6.0.1",
        "org.junit.platform:junit-platform-jfr:1.14.2",
        "org.junit.platform:junit-platform-launcher:6.0.2",
        "org.junit.platform:junit-platform-reporting:6.0.2",
        "org.junit.platform:junit-platform-runner:1.14.2",
        "org.junit.platform:junit-platform-suite:6.0.2",
        "org.junit.platform:junit-platform-suite-api:6.0.2",
        "org.junit.platform:junit-platform-suite-commons:1.14.2",
        "org.junit.platform:junit-platform-suite-engine:6.0.1",
        "org.junit.platform:junit-platform-testkit:6.0.2",
        "org.junit.vintage:junit-vintage-engine:6.0.1",
        "org.hamcrest:hamcrest:3.0",

        # resolving warnings about conflicts across bazel modules using the "maven" repo name
        "com.google.code.gson:gson:2.13.2",
        "com.google.errorprone:error_prone_annotations:2.45.0",
        "com.google.guava:guava:33.5.0-jre",
    ],
    fetch_sources = True,
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")
